--- a/week03/signup.html
+++ b/week03/signup.html
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <header>
+            <img src="./images/숙멋사로고명1.svg" />
+            <h2>안녕하세요 :)</br>아기사자님에 대해 알려주세요</h2>
+            </h2>
+        </header>
+        <form name="signup" method="post">
+            <section class="signup_section">
+                <span>이름</span>
+                <input name="first_name" type="text" placeholder="김사자" required/>
+            </section>
+            <section class="signup_section">
+                <span>아이디</span>
+                <input name="username" type="text" placeholder="아이디를 입력해주세요" required>
+            </section>
+            <section class="signup_section">
+                <span>비밀번호</span>
+                <input name="password1" type="password" placeholder="비밀번호를 입력해 주세요" required>
+            </section>
+            <section class="signup_section">
+                <span>비밀번호</span>
+                <input name="password2" type="password" placeholder="비밀번호 확인인" required>
+            </section>
+            <button class="signup_btn" type="submit">회원가입하기</button>
+        </form>
+    </div>
     
 </body>
 </html>
