--- a/week03/signup.html
+++ b/week03/signup.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>회원가입</title>
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
     <div>
         <header>
             <img src="./images/숙멋사로고명1.svg" />
-            <h2>안녕하세요 :)</br>아기사자님에 대해 알려주세요</h2>
-            </h2>
+            <h2>안녕하세요 :) </br>아기사자님에 대해 알려주세요!</h2>
         </header>
         <form name="signup" method="post">
             <section class="signup_section">
@@ -26,8 +26,8 @@
                 <input name="password1" type="password" placeholder="비밀번호를 입력해 주세요" required>
             </section>
             <section class="signup_section">
-                <span>비밀번호</span>
-                <input name="password2" type="password" placeholder="비밀번호 확인인" required>
+                <span>비밀번호 확인</span>
+                <input name="password2" type="password" placeholder="비밀번호 확인" required>
             </section>
             <button class="signup_btn" type="submit">회원가입하기</button>
         </form>
