--- a/week03 과제/mypage.html
+++ b/week03 과제/mypage.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bomin Kim | Portfolio</title>
+  <title>mypage</title>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="mypage.css" />
 </head>
 <body>
   <nav>
@@ -109,6 +109,6 @@
     </div>
   </section>
 
-  <script src="CV.js"></script>
+  <script src="mypage.js"></script>
 </body>
 </html>
